<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    android:paddingRight="@dimen/fragment_right_padding"
    android:background="@color/white">

    <TextView
        android:text="@string/filter"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/fragment_heading_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/fragment_list_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_list_ascending"
            android:text="@string/ascending"
            android:layout_marginLeft="@dimen/fragment_button_left_margin"
            android:textColor="@color/colorPrimary"
            android:background="@color/invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/fragment_list_descending"
            android:text="@string/descending"
            android:layout_marginLeft="@dimen/fragment_button_left_margin"
            android:textColor="@color/colorPrimary"
            android:background="@color/invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>