<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/fragment_padding"
    android:paddingRight="@dimen/fragment_right_padding"
    android:background="@color/white">

    <TextView
        android:text="@string/remove_category"
        android:textSize="@dimen/heading_text_size"
        android:layout_marginBottom="@dimen/fragment_heading_margin_bottom"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_remove_category_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/fragment_remove_category_cancel"
            android:text="@string/cancel"
            android:layout_marginLeft="@dimen/fragment_button_left_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:background="@color/invisible"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/fragment_remove_category_remove"
            android:text="@string/ok"
            android:layout_marginLeft="@dimen/fragment_button_left_margin"
            android:layout_marginStart="@dimen/fragment_button_left_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:background="@color/invisible"
            android:onClick="onClick"/>

    </LinearLayout>


</LinearLayout>